--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -220,7 +220,7 @@ and never kept on the blockchain.";
 "send_to" = "Send to";
 "amount_to_send" = "Amount to send";
 "total_utxo" = "Total UTXO value";
-"send_notice" = "For the transaction to complete, the recipient must get online within the next 12 hours and you should get online within 12 hours afterwards";
+"send_notice" = "For the transaction to complete, the recipient must get online within the next 12 hours and you should get online within 2 hours afterwards.";
 "save_address_title" = "Save address";
 "save_contact_title" = "Save contact";
 "save_contact_text" = "Would you like to save recipient address for futher transactions?";
@@ -330,6 +330,7 @@ and never kept on the blockchain.";
 "your_current_password" = "Enter your current password";
 "paste_payment_proof" = "Paste your payment proof here";
 "payment_proof_error" = "Cannot decode a proof, illegal sequence";
+"enter_name_save" = "Enter name to save or assign to existing contact";
 "tx_status_unknown" = "Unknown reason";
 "tx_status_cancelled" = "Transaction was cancelled";
 "tx_status_signature" = "Peer's signature in not valid";
@@ -593,7 +594,7 @@ and never kept on the blockchain.";
 "sbbs_address" = "SBBS Address";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
-"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving max privacy and offline transactions";
+"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving max privacy transactions";
 "connect_node_offline_public" = "Connect to own node or enable mobile node in the settings to enable receiving public offline transactions";
 "shielded" = "Shielded";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
@@ -632,3 +633,60 @@ and never kept on the blockchain.";
 "rescan_text" = "Rescan will sync transaction and UTXO data with the latest information on the blockchain. The process might take long time.\nAre you sure?";
 "mobile_node_title" = "Mobile node";
 "mobile_node_text" = "Allows to validate and sync with the blockchain";
+"regular_address" = "Regular address";
+"receive_contact_placholder" = "Name the new address or search existing contact";
+"copy_and_close" = "Copy and close";
+"max_privacy_qr_hint" = "Max Privacy transaction can last up to 2 days.\n\nMin transaction fee to send Max privacy coins is 0.01 BEAM.";
+"search_or_paste" = "Search by name or paste address";
+"tx_failure_undefined" = "Unexpected reason, please send wallet logs to Beam support";
+"tx_failure_cancelled" = "Transaction cancelled";
+"tx_failure_receiver_signature_invalid" = "Receiver signature in not valid, please send wallet logs to Beam support";
+"tx_failure_not_registered_in_blockchain" = "Failed to register transaction with the blockchain, see node logs for details";
+"tx_failure_not_valid" = "Transaction is not valid, please send wallet logs to Beam support";
+"tx_failure_kernel_invalid" = "Invalid kernel proof provided";
+"tx_failure_parameters_not_sended" = "Failed to send Transaction parameters";
+"tx_failure_no_inputs" = "Not enough inputs to process the transaction";
+"tx_failure_addr_expired" = "Address is expired";
+"tx_failure_parameters_not_readed" = "Failed to get transaction parameters";
+"tx_failure_time_out" = "Transaction timed out";
+"tx_failure_not_signed_by_receiver" = "Payment not signed by the receiver, please send wallet logs to Beam support";
+"tx_failure_max_height_to_high" = "Kernel maximum height is too high";
+"tx_failure_invalid_state" = "Transaction has invalid state";
+"tx_failure_subtx_failed" = "Subtransaction has failed";
+"tx_failure_invalid_contract_amount" = "Contract's amount is not valid";
+"tx_failure_invalid_sidechain_contract" = "Side chain has invalid contract";
+"tx_failure_sidechain_internal_error" = "Side chain bridge has internal error";
+"tx_failure_sidechain_network_error" = "Side chain bridge has network error";
+"tx_failure_invalid_sidechain_response_format" = "Side chain bridge has response format error";
+"tx_failure_invalid_side_chain_credentials" = "Invalid credentials of Side chain";
+"tx_failure_not_enough_time_btc_lock" = "Not enough time to finish btc lock transaction";
+"tx_failure_create_multisig" = "Failed to create multi_signature";
+"tx_failure_fee_too_small" = "Fee is too small";
+"tx_failure_fee_too_large" = "Fee is too large";
+"tx_failure_kernel_min_height" = "Kernel's min height is unacceptable";
+"tx_failure_loopback" = "Not a loopback transaction";
+"tx_failure_key_keeper_no_initialized" = "Key keeper is not initialized";
+"tx_failure_invalid_asset_id" = "No valid asset id/asset owner id";
+"tx_failure_asset_invalid_info" = "No asset info or asset info is not valid";
+"tx_failure_asset_invalid_metadata" = "No asset metadata or asset metadata is not valid";
+"tx_failure_asset_invalid_id" = "Invalid asset id";
+"tx_failure_asset_confirmation" = "Failed to receive asset confirmation";
+"tx_failure_asset_in_use" = "Asset is still in use (issued amount > 0)";
+"tx_failure_asset_locked" = "Asset is still locked";
+"tx_failure_asset_small_fee" = "Asset registration fee is too small";
+"tx_failure_invalid_asset_amount" = "Cannot issue/consume more than MAX_INT64 asset groth in one transaction";
+"tx_failure_invalid_data_for_payment_proof" = "Some mandatory data for payment proof is missing";
+"tx_failure_there_is_no_master_key" = "Master key is needed for this transaction, but unavailable";
+"tx_failure_keeper_malfunctioned" = "Key keeper malfunctioned";
+"tx_failure_aborted_by_user" = "Aborted by the user";
+"tx_failure_asset_exists" = "Asset has been already registered";
+"tx_failure_asset_invalid_owner_id" = "Invalid asset owner id";
+"tx_failure_assets_disabled" = "Asset transactions are disabled in the wallet";
+"tx_failure_no_vouchers" = "No voucher, no address to receive it";
+"tx_failure_assets_fork2" = "Asset transactions are not available until fork2";
+"tx_failure_out_of_slots" = "Key keeper out of slots";
+"tx_failure_shielded_coin_fee" = "Cannot extract shielded coin, fee is too big.";
+"tx_failure_assets_disabled_receiver" = "Asset transactions are disabled in the receiver wallet";
+"tx_failure_assets_disabled_blockchain" = "Asset transactions are disabled in blockchain configuration";
+"tx_failure_identity_required" = "Peer Identity required";
+"tx_failure_cannot_get_vouchers" = "The sender cannot get vouchers for max privacy transaction";
